--- a/design-omzetten/index.html
+++ b/design-omzetten/index.html
@@ -12,13 +12,14 @@
         <div class="barredenav">
             <a class="active" href="#home">Home</a>
             <a href="#aboutus">about us</a>
-            <a href="#contact">Contact</a>
-            <a href="Cadeaubonen">Cadeaubonen</a>
+            <a href="https://twitter.com/arowbey">Contact</a>
+            <a href="https://www.debijenkorf.be/Off-White?gclid=CjwKCAiA55mPBhBOEiwANmzoQkz8pG9uKxmLCG9bDHbrtW9RVIKa0v9HvM_umR3GEqOaQjAzu8imYhoCPIEQAvD_BwE&gclsrc=aw.ds">Cadeaubonen</a>
             <input type="text" placeholder="Search..">
           </div>
     </div>
         <div class="navv">Een winkel zoeken</div>
         <div class="navvv">GIVING TUESDAY</div>
         <div class="nav">World of OFF-ARW</div>
+        
 </body>
 </html>
